--- a/.gitignore
+++ b/.gitignore
@@ -1,62 +1,100 @@
-# WordPress #
-############
-wp-config-local.php
-wp-content/uploads
-wp-content/blogs.dir/
-wp-content/upgrade/
-wp-content/backup-db/
-wp-content/advanced-cache.php
-wp-content/wp-cache-config.php
-sitemap.xml
-sitemap.xml.gz
+# -----------------------------------------------------------------
+# .gitignore for WordPress
+# Bare Minimum Git
+# http://ironco.de/bare-minimum-git/
+# ver 20150227
+#
+# This file is tailored for a WordPress project
+# using the default directory structure
+#
+# This file specifies intentionally untracked files to ignore
+# http://git-scm.com/docs/gitignore
+#
+# NOTES:
+# The purpose of gitignore files is to ensure that certain files not
+# tracked by Git remain untracked.
+#
+# To ignore uncommitted changes in a file that is already tracked,
+# use `git update-index --assume-unchanged`.
+#
+# To stop tracking a file that is currently tracked,
+# use `git rm --cached`
+#
+# Change Log:
+# 20150227 Ignore hello.php plugin. props @damienfa
+# 20150227 Change theme ignore to wildcard twenty*. props @Z33
+# 20140606 Add .editorconfig as a tracked file
+# 20140404 Ignore database, compiled, and packaged files
+# 20140404 Header Information Updated
+# 20140402 Initially Published
+#
+# -----------------------------------------------------------------
+
+# ignore everything in the root except the "wp-content" directory.
+/*
+!wp-content/
+
+# ignore all files starting with .
+.*
+
+# track this file .gitignore (i.e. do NOT ignore it)
+!.gitignore
+
+# track .editorconfig file (i.e. do NOT ignore it)
+!.editorconfig
+
+# track readme.md in the root (i.e. do NOT ignore it)
+!readme.md
+
+# ignore all files that start with ~
+~*
+
+# ignore OS generated files
+ehthumbs.db
+Thumbs.db
+
+# ignore Editor files
+*.sublime-project
+*.sublime-workspace
+*.komodoproject
+
+# ignore log files and databases
 *.log
+*.sql
+*.sqlite
 
-# wf cache
-wfcache/
+# ignore compiled files
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
 
-# @TODO writable paths
-wp-content/cache/
-wp-content/backups/
-
-# Ignore theme updates
-# wp-content/themes/
-# !wp-content/themes/codeforrva/
-
-# Packages #
-############
+# ignore packaged files
 *.7z
 *.dmg
 *.gz
-*.bz2
 *.iso
 *.jar
 *.rar
 *.tar
 *.zip
-*.tgz
 
-# Logs and databases #
-######################
-*.log
-*.sql
+# ignore everything in the "wp-content" directory, except:
+# "mu-plugins" directory
+# "plugins" directory
+# "themes" directory
+wp-content/*
+!wp-content/mu-plugins/
+!wp-content/plugins/
+!wp-content/themes/
 
-# OS generated files #
-######################
-.DS_Store*
-ehthumbs.db
-Icon?
-Thumbs.db
-._*
-.bash_history
+# ignore these plugins
+wp-content/plugins/hello.php
 
-# Vim generated files #
-######################
-*.un~
+# ignore specific themes
+wp-content/themes/twenty*/
 
-# SASS #
-##########
-.sass-cache
-
-# config cache #
-################
-wp-content/plugins/wordfence/tmp/
+# ignore node/grunt dependency directories
+node_modules/
